# ai-workbench

./: .env.example  .gitignore  CLAUDE.md  MCP_USAGE.md  QUICKSTART.md  README.md  WEB_UI_GUIDE.md  pyproject.toml
examples/: mcp_chat_example.md
src/ai_workbench/: cli.py  config.py  project.py
src/ai_workbench/chatbot/: interactive.py  session.py
src/ai_workbench/crawlers/: web_crawler.py
src/ai_workbench/embedders/: base.py  document_processor.py  mistral_embedder.py
src/ai_workbench/llm/: anthropic_client.py  base.py  mistral_client.py  ollama_client.py  prompt_templates.py
src/ai_workbench/mcp/: client.py
src/ai_workbench/rag/: context_builder.py  retriever.py
src/ai_workbench/scrapers/: web_scraper.py
src/ai_workbench/utils/: io.py
src/ai_workbench/vector_stores/: base.py  chroma_store.py
src/ai_workbench/web/: __init__.py  __main__.py  app.py
src/ai_workbench/web/tabs/: __init__.py  chat.py  config.py  data_collection.py  vector_index.py
src/ai_workbench/web/utils/: __init__.py  error_handling.py  help_content.py  streaming.py  validation.py
