[project]
name = "ai-workbench"
version = "0.1.0"
description = "A modular workbench for AI tools including scrapers, crawlers, and embedders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Existing
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "html2text>=2024.2.26",
    # LLM Clients
    "ollama>=0.1.0",
    # Embeddings
    "mistralai>=1.0.0",
    "sentence-transformers>=2.3.0",
    # Vector Stores
    "chromadb>=0.4.22",
    "numpy>=1.24.0",
    # MCP Protocol
    "mcp>=1.0.0",
    # Utilities
    "tiktoken>=0.5.0",
    "prompt-toolkit>=3.0.0",
    # Web UI
    "gradio>=4.0.0",
    "pytz>=2024.0",
]

[project.scripts]
ai-workbench = "ai_workbench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_workbench"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
